# LinkwiseHub

./: .gitignore  README.md  README.zh-CN.md
ai-service/: .env.example  Dockerfile  Dockerfile.mineru  README.md  docker-compose.yml  pyproject.toml
ai-service/src/linkwisehub_ai/: __init__.py  config.py  main.py  schemas.py
ai-service/src/linkwisehub_ai/adapters/: mineru.py  storage.py
ai-service/src/linkwisehub_ai/api/: routes.py
ai-service/src/linkwisehub_ai/services/: __init__.py  document_parse.py  normalizer.py
ai-service/tests/: test_api.py  test_mineru_client.py  test_normalizer.py
docs/: ai-service.md  database.md  development.md  migration-analysis.md
docs/architecture/: ai-service-architecture.drawio
server/: docker-compose.qdrant.yml  pom.xml
server/src/main/resources/: application.yml  init.sql  test_data.sql
server/src/main/resources/sql/: data.sql  knowledge_migration.sql  qdrant_collection_init.md  (+2 more)
web-admin/: index.html  package-lock.json  package.json
web-admin/src/: App.vue  main.js
web-admin/src/api/: ai.js
web-admin/src/components/ai/: ChatInput.vue  ChatSidebar.vue  MessageItem.vue  WelcomeArea.vue
web-admin/src/router/: index.js
web-admin/src/styles/: animations.css  chat.css  common.css  variables.css
web-admin/src/utils/: chatUtils.js  documentFileTypes.js
web-admin/src/views/: Layout.vue  Login.vue  Organization.vue  Role.vue  User.vue
web-admin/src/views/ai/: Chat.vue  DocumentProcess.vue  KnowledgeBase.vue  OnlyOfficeEditor.vue
web-admin/src/views/base/: FileManage.vue  Organization.vue  Role.vue  User.vue
(+163 files in other folders)
