[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "linkwisehub-ai-service"
version = "0.1.0"
description = "LinkwiseHub internal AI capability service"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "minio>=7.2,<8",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkwisehub_ai"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
